--- a/NoSTORE/Views/Shared/_Layout.cshtml
+++ b/NoSTORE/Views/Shared/_Layout.cshtml
@@ -13,7 +13,10 @@
 <body>
     <header>
         <nav>
-            <img src="svg/nostore.svg" alt="NoSTORE" class="site__logo" />
+            <a href="/">
+                <img src="~/svg/nostore.svg" alt="NoSTORE" class="site__logo" />
+            </a>
+            
             <a href="/catalog">
                 <div class="catalog__button">
                     <p>Каталог</p>
@@ -56,7 +59,7 @@
     </main>
     <footer>
         <div class="footer__inside">
-            <img src="svg/nostore.svg" alt="NoSTORE" class="footer_site__logo" />
+            <img src="~/svg/nostore.svg" alt="NoSTORE" class="footer_site__logo" />
             <div class="sections">
                 <section class="footer__section">
                     <h1>Компания</h1>
